--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-.idea/
-/node_modules/
-/_v2/LeapSDK/docs/
-/_v2/LeapSDK/.idea/
+# Created by .ignore support plugin (hsz.mobi)
+
+/node_modules
+/_v2/LeapSDK/.idea
+/_v2/LeapSDK/docs
+.idea
