ajout leapjs package.json

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@
 /_v2/LeapSDK/.idea
 /_v2/LeapSDK/docs
 /.idea/
+/.idea/leapmotion.iml
+/.idea/vcs.xml
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/copyright/
